@@ -1,6 +1,6 @@
 project('tea', ['cpp','c'],
          default_options : ['cpp_std=c++11'],
-         version : '50.0.0',
+         version : '50.0.1',
          license : 'GPLv3')
 
 add_global_arguments('-DVERSION_NUMBER="50.0.0"', language : 'cpp')
