@@ -1,5 +1,8 @@
 //it's lazy updated file, so the real ChangeLog is the activity on github
 
+* fixes cmake file for install icons and desktop file
+* OS/2 fix
+
 * cmake's make dist creates tarball with dirname as at github, i.e. tea-qt-<ver>
 
 + Tune::UI Mode:: Classic/Docked
